# Soteria

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  COPYING  Community Ideas.md  Hosting-Node.md  INSTALL.md  Jenkinsfile.gitian  Makefile.am  QuickNodeSetup.md  README.md  Soteria RPC API.md  Soteria-Bootstrap-Guide.md  configure.ac  dpi36.background.tiff  dpi72.background.tiff  libsoteriaconsensus.pc.in  recommendations.md  soteria-windows.conf  soteria_vps.conf
doc/man/: Makefile.am  soteria-cli.1  soteria-qt.1  soteriad.1
src/: LibBoolEE.cpp  Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addressindex.h  addrman.cpp  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_memusage.h  (+95 more)
src/algo/: extra.c  extra.h
src/algo/soterc/: soterc.h
src/algo/soterg/: bmw.c  soterg.h  sph_sha2.h
src/assets/: assetdb.cpp  assetdb.h  assets.cpp  assets.h  assetsnapshotdb.cpp  assetsnapshotdb.h  assettypes.cpp  assettypes.h  messages.cpp  messages.h  myassetsdb.cpp  myassetsdb.h  restricteddb.cpp  restricteddb.h  rewards.cpp  rewards.h  snapshotrequestdb.cpp  snapshotrequestdb.h  sns.cpp  sns.h
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_soteria.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  lockedpool.cpp  mempool_eviction.cpp  perf.cpp  perf.h  prevector_destructor.cpp  rollingbloom.cpp  verify_script.cpp
src/bench/data/: block566553.raw
src/compat/: arm_acle_selector.h  byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/config/: soteriaia-config.h.in
src/consensus/: consensus.cpp  consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.h  chacha20.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha256_avx2.cpp  sha256_shani.cpp  sha256_sse41.cpp  sha512.h
src/crypto/ctaes/: README.md
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  powcache.cpp  powcache.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  assetcontroldialog.cpp  assetcontroldialog.h  assetcontroltreewidget.cpp  assetcontroltreewidget.h  assetfilterproxy.cpp  assetfilterproxy.h  assetrecord.h  assetsdialog.cpp  assetsdialog.h  assettablemodel.cpp  assettablemodel.h  bantablemodel.cpp  bantablemodel.h  callback.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  createassetdialog.cpp  createassetdialog.h  csvmodelwriter.cpp  csvmodelwriter.h  currencyunits.h  duster.cpp  duster.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  importkeysdialog.cpp  importkeysdialog.h  (+111 more)
src/qt/forms/: addpeerdialog.ui  addressbookpage.ui  assetcontroldialog.ui  assetsdialog.ui  coincontroldialog.ui  createassetdialog.ui  debugwindow.ui  duster.ui  helpmessagedialog.ui  intro.ui  mnemonicdialog02.ui  mnemonicdialog03.ui  mnemonicdialog1.ui  modaloverlay.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  paperwalletdialog.ui  receivecoinsdialog.ui  receiverequestdialog.ui  reissueassetdialog.ui  restrictedassetsdialog.ui  restrictedfreezeaddress.ui  sendassetsentry.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  smartcontracts.ui  wrapping.ui
src/qt/locale/: soteria_af.ts  soteria_af_ZA.ts  soteria_ar.ts  soteria_be_BY.ts  soteria_bg.ts  soteria_ca.ts  (+79 more)
src/rpc/: assets.cpp  blockchain.cpp  blockchain.h  client.cpp  client.h  messages.cpp  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  rewards.cpp  safemode.cpp  safemode.h  server.cpp  server.h  smartcontracts.cpp  smartcontracts.h  test.json
src/script/: interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  soteriaconsensus.cpp  soteriaconsensus.h  standard.cpp  standard.h
src/smartcontracts/: smartcontracts.cpp  smartcontracts.h  soterialib.cpp  soterialib.h
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  random_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  (+26 more)
src/util/: moneystr.cpp  moneystr.h  strencodings.cpp  strencodings.h  system.cpp  system.h  time.cpp  time.h
src/wallet/: bip39.cpp  bip39.h  bip39_english.h  coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  feebumper.cpp  feebumper.h  fees.cpp  fees.h  init.cpp  init.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+510 files in other folders)
